--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.6"
   },
